Misc Guns EditorItems

--- a/items/styleless/bsoa_misc_gun/vbsp_config.cfg
+++ b/items/styleless/bsoa_misc_gun/vbsp_config.cfg
@@ -25,7 +25,8 @@
 				}
 			"$cube_type 4" // Antline Router.
 				{
-				"ChangeInstance" ""
+				"ChangeInstance" "instances/BEE2/styleless/misc_guns/time_travel.vmf"
+				"Has"	"OrangePortal"
 				}
 			}
 		}
